src/test/deca/context/invalid/test_class/call_field_as_methode.deca
// Description:
//    Unit Test call a field as a method
// Results:
//    x is not defined as a method
//
// History:
//    Created on 20/01/2025


class A{
    int x = 2;

    int test(){
	
    }
}

{
    A a = new A();
    println(a.x());
}
